Fixed progress bar overflow by adding first-child CSS

--- a/app/assets/stylesheets/sidebar.css.scss
+++ b/app/assets/stylesheets/sidebar.css.scss
@@ -85,6 +85,11 @@ PROGRESS BAR COLORS
   background-image: none;
 }
 
+.group-member-progress:first-child{
+    border-top-left-radius: 10px;
+    border-bottom-left-radius: 10px;
+}
+
 .group-member-0 {
   background-color: $orange;
 }
